# StackPage

./: .gitignore  README.md  TODO.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: deploy.rs  export.rs  mod.rs  project.rs
src/app/: App.tsx
src/components/: ErrorBoundary.tsx  UpdaterBanner.tsx
src/components/blocks/: AsymmetricColumnBlock.tsx  BlockRenderer.tsx  ButtonBlock.tsx  CartButtonBlock.tsx  ContactFormBlock.tsx  ContainerBlock.tsx  CookieBannerBlock.tsx  CountdownBlock.tsx  DividerBlock.tsx  EmbedBlock.tsx  FaqBlock.tsx  FooterBlock.tsx  FourColumnBlock.tsx  GalleryBlock.tsx  HeadingBlock.tsx  HeroBlock.tsx  IconBlock.tsx  ImageBlock.tsx  MapBlock.tsx  MasonryGridBlock.tsx  NavigationBlock.tsx  PricingTableBlock.tsx  ProductCardBlock.tsx  ProductDetailBlock.tsx  ProductGridBlock.tsx  SlideBannerBlock.tsx  SocialShareBlock.tsx  TestimonialBlock.tsx  TextBlock.tsx  ThreeColumnBlock.tsx  VideoBlock.tsx  (+3 more)
src/i18n/: index.ts  translations.ts
src/lib/: blockDefaults.ts  pageTemplates.ts  tauri.ts  thumbnail.ts
src/stores/: useEditorStore.ts  usePresetsStore.ts  useProjectStore.test.ts  useProjectStore.ts  useThemeStore.ts
src/styles/: globals.css
src/types/: blocks.ts  nanoid.ts  project.ts  theme.ts
website/: .htaccess  DEPLOY.md  index.php
website/assets/: style.css
website/updater/: README.md
website/updates/: .htaccess  index.php  releases.json
(+24 files in other folders)
